--- a/projectusInvictus.tex
+++ b/projectusInvictus.tex
@@ -1,18 +1,100 @@
-\documentclass[twoside,a4paper]{book}
+\documentclass[a4paper, 12pt, oneside]{book}
+\usepackage[T1]{fontenc}
+\usepackage[utf8]{inputenc}
+\usepackage[portuguese]{babel}
+\usepackage[document]{ragged2e}
+\usepackage{hyphenat}
+\usepackage{lipsum}
+
+\usepackage{xcolor}
+\definecolor{cinza}{rgb}{0.5,0.5,0.5}
+
+\usepackage[a4paper]{geometry}
+\geometry{left=2.5cm}
+\geometry{right=2.5cm}
+\geometry{footskip=2.5cm}
+\setlength{\parindent}{2em}
+\setlength{\parskip}{1em}
+\renewcommand{\baselinestretch}{1.5}
+
+\usepackage[sfdefault]{roboto}
+
+\usepackage[pagestyles]{titlesec}
+\newpagestyle{meuestilo}{\setfoot[\thepage][][]{\fontfamily{Montserrat-TOsF}\selectfont\color{cinza} Projectus Invictus}{}{\fontfamily{Montserrat-TOsF}\selectfont\color{cinza}\thepage}}
+\pagestyle{meuestilo}
+
+
+
+\usepackage{sectsty}
+\allsectionsfont{\fontfamily{Montserrat-TOsF}\selectfont\mdseries}
+\chapterfont{\raggedleft\fontfamily{Montserrat-TOsF}\selectfont\mdseries}
+
+
+\usepackage{etoolbox}
+\AtBeginEnvironment{quote}{\large\itshape}
+
+\title{Projectus Invictus}
+\author{Lucas Costa}
 
 \begin{document}
-\frontmatter
-
 \maketitle
 
-% Introductory chapters
-\chapter{Preface}
-% ...
+\chapter*{\underline{Introdução}}
 
-\mainmatter
-\chapter{First chapter}
-% ...
+A intenção deste e-book é de ajudar você, desenvolvedor, freelancer, engenheiro de software e programador, seja sozinho ou em equipe, a melhorar ou implementar um processo mais eficiente e rápido para produzir o seu software, desde as primeiras conversas com os interessados até a entrega final e após.
+
+A Technologiká, hoje representada pelo seu fundador Lucas Costa (quem vos escreve), veio de um mundo acadêmico que caiu de paraquedas na indústria de desenvolvimento. Durante essa trajetória nos últimos anos, eu passei por várias dificuldades na hora de entender o que os clientes e superiores queriam que fosse desenvolvido, bem como exibir o andamento e realizar a entrega dos sistemas de uma maneira adequada, que também não consumisse mais tempo do que propriamente desenvolvendo.
+
+Mas foi por meio destas experiências e dores que encontrei diversas ferramentas e metodologias que me ajudaram a fazer um trabalho de mais qualidade, que envolve o cliente do início ao fim e o deixa mais satisfeito, com um sistema que é mais a cara dele e tem de fato o que ele precisa pra solucionar o seu problema. São muitos mecanismos e métodos que, se aplicados da maneira correta e na sequência correta, produzem resultados poderosos, como: redução do tempo de desenvolvimento, aumento da qualidade, melhor comunicação com o cliente e aumento de sua satisfação. Fato é que é capaz de duplicar ou mais a velocidade de desenvolvimento e ainda reduzir pela metade o estresse do trabalho.
+
+Na continuidade dessa jornada, percebi que muitos profissionais da nossa área passam pelas mesmas dificuldades que eu passei. Tanto colegas de estudo e até mesmo novos profissionais integrando minha equipe. Entendi que não é um conhecimento fácil de se obter, já que requereu muita experiência, erros e acertos, clientes perdidos e tempo perdido. A faculdade não me preparou pelo que estava por vir.
+
+Por isso, entendi que tinha nas mãos uma missão: ajudar mais desenvolvedores a não passar por tantas dores desnecessárias. Portanto, a minha missão não é de ensinar a você técnicas de programação, códigos e linguagens, mas sim o que acontece além-código-fonte.
+
+Há um ambiente externo à programação que muitos desconhecem e ignoram. Fato é que, se realmente conhecessem, seriam os mais felizes do mundo. E eu quero te levar um passo mais perto disso, ajudando você a se tornar:
+
+\textbf{Um projetista Invictus.}
+
+\noindent\makebox[\linewidth]{\rule{.5\paperwidth}{0.4pt}}
+
+Quando falamos sobre o processo de produção de um software, uma das melhores formas de o dividir é em quatro partes:
+\begin{itemize}
+	\item Concepção: é aqui que começam as conversações com o seu cliente (entenda-se "cliente" como chefe, contratador, líder, ou seja, pra quem você vai fazer o sistema) para entender qual a ideia geral que o sistema vai atender, qual problema ele vai resolver;
+	\item Elaboração: tendo uma noção clara do objetivo, esta fase é dedicada a documentar pontos chave do sistema. Não entenda "documentar" como o processo maçante de escrever textos que ninguém lê, os famosos "documentos de gaveta". A arte de documentar está em na capacidade de estabelecer maneiras visuais de representar a solução, tanto com protótipos, como por gráficos, ou até mesmo por textos;
+	\item Construção: agora, mãos à massa! Com tudo bem arquitetado, o que falta é produzir o sistema de uma vez por todas. E nessa fase do processo, vários cuidados e técnicas devem ser aplicados;
+	\item Implantação: quando se chega ao final da construção e desenvolvimento, é hora de implantar e disponibilizar a solução para o cliente. É o momento mais esperado por nós, portanto deve ser levado com atenção para que dê tudo certo.
+\end{itemize}
+
+Neste livro, trato cada uma dessas fases com detalhe, para que você não tenha dúvidas e sinta-se seguro em todas as fases de desenvolvimento do seu sistema. Tanto para um sistema que você está começando agora como para um que já está sendo desenvolvido, você pode inserir estas técnicas a partir de hoje no seu fluxo.
+
+\chapter*{\underline{Concepção}}
+
+O processo de concepção de um software pode ser bastante curto, pois é aqui onde você tem as primeiras conversas com seu cliente. Em casos esporádicos, pode levar mais tempo, quando por exemplo, ainda não se sabe bem o que vai construir, ou quando a comunicação com o cliente é lenta, dificultada.
+
+Podemos dividir esse processo em duas fases, dependentes de contato com o cliente: o Contato Inicial e a Visualização do Sistema.
+
+\section*{Contato Inicial}
+
+Seja no ambiente empresarial, seja no contato direto, o começo de produção de um software sempre inicia com uma conversa, normalmente por parte do interessado. Ele vem com uma ideia, uma dúvida, às vezes com um sonho, com a crença inabalável que você é quem pode realizá-lo. Portanto, neste primeiro contato, seja polido e ouvinte. Não tire conclusões precipitadas.
+
+Uma boa filosofia de vida e negócio que se aplica nesta fase do processo é acreditar nesta frase: "tudo é possível". Até mesmo as ideias mais mirabolantes podem se tornar em um sistema incrível como nenhum outro. Então aguarde com atenção e pense em soluções, não em dificuldades.
+
+\begin{quote}
+	\begin{flushright}
+		Seja polido e ouvinte, não tire conclusões precipitadas. Lembre-se, "tudo é possível".
+	\end{flushright}
+\end{quote}
+
+Entretanto, é imprescindível que você faça essas perguntas, para ajudar na delimitação do projeto:
+\begin{itemize}
+	\item Qual o objetivo do sistema/aplicativo/software?
+	\item Qual problema ele resolve?
+	\item Quem vai usar?
+\end{itemize}
+
+Essas questões serão feitas no futuro novamente para reafirmar o propósito do projeto, mas para uma primeira conversa já é o suficiente para se entender a ideia geral.
+
+Depois deste primeiro contato, marque a próxima reunião o quanto antes com o seu cliente, para fazer a Visualização do Sistema. É importante que esse segundo encontro aconteça o quanto antes, para que as ideias e o interesse não se esfriem. Mas também, a depender de quão madura está a intenção, não é recomendado fazer isso imediatamente. Marque um horário, uma reunião, para se dedicar na próxima atividade, pois estará fundando os alicerces do projeto.
 
 
-\backmatter
-\chapter{Last note}
+\end{document}
